Improve robustness of matching stuff in cluster description