@@ -4,14 +4,13 @@ import com.google.common.base.Predicate;
 import com.google.common.base.Predicates;
 import jakarta.persistence.*;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.regex.Matcher;
 
 @Entity
 public class ClusterDescription {
+
     public enum Field {
         PURPOSE,
         RECIPIENTORPAYER,
@@ -39,9 +38,9 @@ public class ClusterDescription {
     private String name;
     private String meta;
     @OneToMany(cascade = CascadeType.PERSIST)
-    private final Map<Field, MatchDescription> whiteList = new HashMap<>();
+    private final Map<Field, MatchDescription> whiteList = new EnumMap<>(Field.class);
     @OneToMany(cascade = CascadeType.PERSIST)
-    private final Map<Field, MatchDescription> blackList = new HashMap<>();
+    private final Map<Field, MatchDescription> blackList = new EnumMap<>(Field.class);
 
     public static ClusterDescription create(String name) {
         final var cluster = new ClusterDescription();
@@ -71,24 +70,41 @@ public class ClusterDescription {
         return this;
     }
 
+    static boolean hasValidTokens(MatchDescription matchDescription) {
+        return Optional.ofNullable(matchDescription)
+                .map(MatchDescription::getTokens)
+                .stream()
+                .flatMap(List::stream)
+                .filter(Objects::nonNull)
+                .anyMatch(token -> !token.isEmpty());
+    }
+
+    static Predicate<Transaction> createPredicate(Map.Entry<ClusterDescription.Field, MatchDescription> entry) {
+        return transaction -> Optional.ofNullable(entry)
+                .map(Map.Entry::getValue)
+                .map(MatchDescription::getPattern)
+                .flatMap(pattern -> Optional.of(entry)
+                        .map(Map.Entry::getKey)
+                        .map(fieldMap::get)
+                        .map(function -> function.apply(transaction))
+                        .map(pattern::matcher))
+                .map(Matcher::matches)
+                .orElse(false);
+    }
+
     public List<Transaction> consumeMatching(List<Transaction> transactions) {
-        final Iterable<Predicate<Transaction>> white = whiteList.entrySet().stream()
-                .filter(entry -> !entry.getValue().getTokens().isEmpty())
-                .map(entry -> (Predicate<Transaction>) transaction -> entry.getValue()
-                        .getPattern()
-                        .matcher(fieldMap.get(entry.getKey()).apply(transaction))
-                        .matches())
-                .collect(Collectors.toList());
-        final Iterable<Predicate<Transaction>> black = blackList.entrySet().stream()
-                .filter(entry -> !entry.getValue().getTokens().isEmpty())
-                .map(entry -> (Predicate<Transaction>) transaction -> entry.getValue()
-                        .getPattern()
-                        .matcher(fieldMap.get(entry.getKey()).apply(transaction))
-                        .matches())
-                .collect(Collectors.toList());
-        
+        final var includeList = whiteList.entrySet().stream()
+                .filter(entry -> hasValidTokens(entry.getValue()))
+                .map(ClusterDescription::createPredicate)
+                .toList();
+
+        final var excludeList = blackList.entrySet().stream()
+                .filter(entry -> hasValidTokens(entry.getValue()))
+                .map(ClusterDescription::createPredicate)
+                .toList();
+
         return transactions.stream()
-                .filter(Predicates.and(Predicates.or(white), Predicates.not(Predicates.or(black))))
-                .collect(Collectors.toList());
+                .filter(Predicates.and(Predicates.or(includeList), Predicates.not(Predicates.or(excludeList))))
+                .toList();
     }
 }
